--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -238,7 +238,8 @@ a:focus {
 }
 @media (min-width: 767px) {
   .content-section {
-    padding-top: 250px;
+    padding-top: 100px;
+    /*padding-top: 250px;*/
   }
   .download-section {
     padding: 100px 0;
