Colors and links

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -8,7 +8,7 @@ body {
   height: 100%;
   font-family: "Lora", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: white;
-  background-color: black;
+  background-color: #6a4b84;
 }
 html {
   width: 100%;
@@ -113,7 +113,7 @@ a:focus {
   }
   .navbar-custom.top-nav-collapse {
     padding: 0;
-    background: black;
+    background: #6a4b84;
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   }
 }
